--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   firebase_core: ^3.14.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
+  hive: ^2.2.3
+  firebase_auth: ^5.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
