--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   firebase_auth: ^5.6.0
   go_router: ^15.2.0
   equatable: ^2.0.7
+  get_it: ^8.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
