--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   go_router: ^15.2.0
   equatable: ^2.0.7
   get_it: ^8.0.3
+  flutter_svg_provider: ^1.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
