Add Firestore and Firebase Storage support add the domain layer and data layer with Restaurants (i can not using the fire base storage because i must  upgrade my project's billing plan Instead of i using the path of image in my local repo assets)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dev_dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   flutter_svg_provider: ^1.0.7
+  cloud_firestore: ^5.6.9
+  firebase_storage: ^12.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
